--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
 attrs==24.2.0
+discord-ext-modal-paginator==1.2.0
 discord.py==2.4.0
 frozenlist==1.5.0
 idna==3.10
